--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   --text-color: #333;
 }
 
+@page {
+  margin: 1in;
+}
+
 body {
   color: var(--text-color);
   font-family: 'Open Sans', sans-serif;
@@ -61,6 +65,10 @@ input[type="text"] {
   font-size: 2rem;
   padding-left: 0.2in;
   width: 5.5in;
+}
+
+label[for="showLineNumbers"] {
+  margin-left: 0.3in;
 }
 
 main {
